End of iteration 7
Created Admin Account
Can upload/remove docs
End date is in DB as opposed to days left
emails get sent out
summer note text editor integrated

--- a/client/templates/Summary.html
+++ b/client/templates/Summary.html
@@ -25,7 +25,8 @@
 		<p> Your Research Pitch! </p>
 		<div class = "ResearchSummary">
 		
-		<!--<div id="summernote">Hello Summernote</div>-->
+		<!-- WARNING CODE INJECTION, MAKE SURE TO WHITELIST WHAT THE USER CAN INPUT -->
+		<div id="summernote">Hello Summernote</div>
 
 		</div>
 		<br>
@@ -35,11 +36,11 @@
 		<br>
 
 	</div>
-	<!--
+	
 	<script type="text/javascript">
 		$(document).ready(function() {
 		  $('#summernote').summernote();
 		});
 	</script>
--->
+
 </template>
