--- a/client/templates/projectThumbNail.html
+++ b/client/templates/projectThumbNail.html
@@ -42,7 +42,7 @@
 
 					</div>
 					<div class="col-sm-3">
-						<b>{{daysLeft}}</b>
+						<b>{{calculateDaysLeft _id}}</b>
 						<br>
 						<p>Days Left</p>
 					</div>
