start of iteration 8
changed home page photos
fixed minor bugs on research page, and changed end date to work when
approved

--- a/client/templates/carousel.html
+++ b/client/templates/carousel.html
@@ -10,15 +10,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="placeholder-red.png" alt="Placeholder" width="1100" height="618">
+        <img src="sea-nature-sunny-beach.jpg" alt="sea-nature" style="width:100%; height:580px; overflow: hidden;">
       </div>
 
       <div class="item">
-        <img src="placeholder-blue.png" alt="Placeholder" width="1100" height="618">
+        <img src="landmark-bridge-cliff-california.jpeg" alt="landmark" style="width:100%; height:580px; overflow: hidden;">
       </div>
 
       <div class="item">
-        <img src="placeholder-grey.png" alt="Placeholder" width="1100" height="618">
+        <img src="dawn-landscape-sky-sunset.jpg" alt="dawn-landscape" style="width:100%; height:580px; overflow: hidden;">
       </div>
     </div>
 
