--- a/client/templates/profilePage.html
+++ b/client/templates/profilePage.html
@@ -61,10 +61,12 @@
 				<div class="container">
 					<div class="page-header">
   						<h1>Biography</h1>
+  						{{#if thisUsersProfile}}
   						<div class="fileUpload btn btn-primary" >
 						    <span>Upload Document</span>
 						   	<input type ="file" id = "profileAspects" accept = ".txt, .pdf, .doc, .xls" class="upload" />
 						</div>
+						{{/if}}
 					</div>
 					<p>{{profile.bio}}</p>
 					<table class="table table-hover" id = "my_table">
@@ -162,7 +164,9 @@
 <template name="documentDisplay">
       <tr>
         <td><a href = "{{URL}}">{{Name}}</a></td>
+        {{#if thisUsersProfile}}
         <td><button class = "cancelDocument btn btn-danger btn-mini" type="button">Remove</button></td>
+        {{/if}}
       </tr>
 </template>
 
