--- a/client/templates/department.html
+++ b/client/templates/department.html
@@ -10,7 +10,7 @@
 			  <div class="item">Engineering</div>
 			  <div class="item">Mathematics</div>
 			  <div class="item">Physics</div>
-			  <div class="item">Fitness & Nutrition</div> 
+			  <div class="item">Fitness and Nutrition</div> 
 				</div>
 			</div> 
 		</div>
