finished filtering projects and put params in URL

--- a/client/templates/discoverLayout.html
+++ b/client/templates/discoverLayout.html
@@ -10,74 +10,74 @@
             <div class="col-md-11 col-sm-11">
                 <div class="row">
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/medical">
+                        <a class = "categoryLink" >
                             <div class="shortcut">
-                                <i class="fa fa-medkit shortcut-icon icon-red"></i>
-                                <h3>Medical</h3>
-                                <span class="total-items">234,567</span>
+                                <i class="fa fa-medkit shortcut-icon icon-red">
+                                    <h3 style= "color: grey;">Medical</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/photography">
+                        <a class = "categoryLink" >
                             <div class="shortcut">
-                               <i class="fa fa-camera shortcut-icon icon-green"></i>
-                                <h3>Photography</h3>
-                                <span class="total-items">25,366</span>
+                               <i class="fa fa-camera shortcut-icon icon-green">
+                                <h3 style = "color: grey;">Photography</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/physiology">
+                        <a class = "categoryLink">
                             <div class="shortcut">
-                                <i class="fa fa-male shortcut-icon icon-brown"></i>
-                                <h3>Physiology</h3>
-                                <span class="total-items">252,546</span>
+                                <i class="fa fa-male shortcut-icon icon-brown">
+                                    <h3 style= "color: grey;">Physiology</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/mathematics">
+                        <a class = "categoryLink" >
                             <div class="shortcut">
-                                <i class="fa fa-area-chart shortcut-icon icon-violet"></i>
-                                <h3>Mathematics</h3>
-                                <span class="total-items">252,546</span>
+                                <i class="fa fa-area-chart shortcut-icon icon-violet">
+                                    <h3 style= "color: grey;">Mathematics</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/nutrition">
+                        <a class = "categoryLink">
                             <div class="shortcut">
-                                <i class="fa fa-spoon shortcut-icon icon-dark-blue"></i>
-                                <h3>Nutrition</h3>
-                                <span class="total-items">252,546</span>
+                                <i class="fa fa-spoon shortcut-icon icon-dark-blue">
+                                    <h3 style= "color: grey;">Nutrition</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/engineering">
+                        <a class = "categoryLink" >
                             <div class="shortcut">
-                                <i class="fa fa-space-shuttle shortcut-icon icon-light-blue"></i>
-                                <h3>Engineering</h3>
-                                <span class="total-items">252,546</span>
+                                <i class="fa fa-space-shuttle shortcut-icon icon-light-blue">
+                                    <h3 style= "color: grey;">Engineering</h3>
+                                </i>
                             </div>
                         </a> 
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/education">
+                        <a class = "categoryLink" >
                             <div class="shortcut">
-                                <i class="fa fa-graduation-cap shortcut-icon icon-black"></i>
-                                <h3>Education</h3>
-                                <span class="total-items">252,546</span>
+                                <i class="fa fa-graduation-cap shortcut-icon icon-black">
+                                    <h3 style= "color: grey;">Education</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" href="/projects/other">
+                        <a class = "categoryLink">
                             <div class="shortcut">
-                                <i class="fa fa-wrench shortcut-icon icon-light-green"></i>
-                                <h3>Other</h3>
-                                <span class="total-items">252,546</span>
+                                <i class="fa fa-wrench shortcut-icon icon-light-green">
+                                    <h3 style= "color: grey;">Other</h3>
+                                </i>
                             </div>
                         </a>
                     </div>
