--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/discover">Discover</a></li>
         <li><a href="/Begin">Start a quest</a></li>
-        <li><a href="#">About us</a></li>
+        <li><a href="/aboutUs">About us</a></li>
       </ul>
       <form class="search navbar-form navbar-left" role="search">
         <div class="form-group">
