--- a/client/templates/loginPage.html
+++ b/client/templates/loginPage.html
@@ -8,10 +8,10 @@
         <div class="well">
           <form role="form">
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Email">
+              <input type="email" name="email" class="form-control" placeholder="Email">
             </div>
             <div class="form-group">
-              <input type="password" class="form-control" placeholder="Password">
+              <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary col-lg-12 col-xs-12">Login</button>
           </form>
