--- a/client/templates/signupPage.html
+++ b/client/templates/signupPage.html
@@ -9,19 +9,16 @@
           <form role="form">
 
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="First Name">
+              <input type="text" name="name" class="form-control" placeholder="Name">
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="Last Name">
+              <input type="email" name="email" class="form-control" placeholder="Email">
             </div>
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Email">
+              <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
             <div class="form-group">
-              <input type="password" class="form-control" placeholder="Password">
-            </div>
-            <div class="form-group">
-              <input type="password" class="form-control" placeholder="Verify Password">
+              <input type="password" name="vfy-password" class="form-control" placeholder="Verify Password">
             </div>
 
             <button type="submit" class="btn btn-primary col-lg-12 col-xs-12">Sign Up!</button>
