start of iteration 10
co-owners are linked to projects
ended field is added, as well as having an ended “department”
edited server to only have 1 project

--- a/client/templates/UploadProject.html
+++ b/client/templates/UploadProject.html
@@ -7,7 +7,7 @@
 	        	<h4 class="modal-title" id="UploadProject">Save & Upload </h4>
 	      	</div>
 	      	<div class="modal-body">
-	        	<h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif';"> Congratulations, you have now submitted your research for funding. Good Luck! </h1>
+	        	<h1 style= "font-family: 'Benton Sans','Helvetica','sans-serif';"> Your research project is pending approval to be on our site. You will be emailed if it is granted within the next 48 hours. Good Luck! </h1>
 	      	</div>
 	      	<div class="modal-footer">
 	      		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
