--- a/client/templates/discoverLayout.html
+++ b/client/templates/discoverLayout.html
@@ -19,15 +19,6 @@
                         </a>
                     </div>
                     <div class="col-xs-4 col-sm-3">
-                        <a class = "categoryLink" >
-                            <div class="shortcut">
-                               <i class="fa fa-camera shortcut-icon icon-green">
-                                <h3 style = "color: grey;">Photography</h3>
-                                </i>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-xs-4 col-sm-3">
                         <a class = "categoryLink">
                             <div class="shortcut">
                                 <i class="fa fa-male shortcut-icon icon-brown">
@@ -77,6 +68,15 @@
                             <div class="shortcut">
                                 <i class="fa fa-wrench shortcut-icon icon-light-green">
                                     <h3 style= "color: grey;">Other</h3>
+                                </i>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-xs-4 col-sm-3">
+                        <a class = "categoryLink" >
+                            <div class="shortcut">
+                               <i class="fa fa-trophy shortcut-icon icon-green">
+                                <h3 style = "color: grey;">Ended</h3>
                                 </i>
                             </div>
                         </a>
