--- a/client/templates/StartResearchTemplate.html
+++ b/client/templates/StartResearchTemplate.html
@@ -1,23 +1,56 @@
 <template name = "StartResearch">
-	<div class = "container">
-		<div class = "row">
-	      	<h1 id="researchTitle" style= "font-family: 'Benton Sans','Helvetica','sans-serif'; font-size: 40px"> 
-	     	</h1>
-			<br>
-			<br>
-
-			<div class="col-lg-3">
+		
+	<div class="row affix-row">
+	    <div class="col-sm-3 col-md-2 affix-sidebar" >
+			<div class="sidebar-nav">
+		  <div class="navbar navbar-default" role="navigation" style = "height: 100%;">
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
+		      <span class="sr-only">Toggle navigation</span>
+		      <span class="icon-bar"></span>
+		      <span class="icon-bar"></span>
+		      <span class="icon-bar"></span>
+		      </button> 
+		      <span class="visible-xs navbar-brand">Sidebar menu</span>
+		    </div>
+		    <div class="navbar-collapse collapse sidebar-navbar-collapse" >
+		      <ul class="nav navbar-nav" id="sidenav01">
+		        <li class="active">
+		          <a href="#" data-toggle="collapse" data-target="#toggleDemo0" data-parent="#sidenav01" class="collapsed">
+		          <h4>
+					Title
+		          <br>
+		          </h4>
+		          </a>
+		        </li>
+		        <li>
+		          <a href="#" data-toggle="collapse" data-target="#toggleDemo" data-parent="#sidenav01" class="collapsed" aria-expanded="true" >
+		          <span class="glyphicon glyphicon-book"></span>Research Editor <span class="caret"></span>
+		          </a>
+		          <div class="collapse" id="toggleDemo" style="height: 0px;">
+		            <ul class="nav nav-list">
+		              <li id="fundamentals" class = "active"><a href="#Fundamentals" aria-expanded="true" data-toggle="tab">Fundamentals</a></li>
+					<li id="summary"><a href="#Summary" data-toggle="tab">Summary</a></li>
+					<li id="team"><a href="#Team" data-toggle="tab">Team</a></li>
+		            </ul>
+		          </div>
+		        </li>
+		        
+		      </ul>
+		      </div><!--/.nav-collapse -->
+		    </div>
+		  </div>
+		</div>
+<!--
+			<div class="col-lg-3" style="background-color:black;">
 				<ul class="nav nav-pills nav-stacked tabs-left">
 			  		<li id="fundamentals" class = "active"><a href="#Fundamentals" aria-expanded="true" data-toggle="tab">Fundamentals</a></li>
 					<li id="summary"><a href="#Summary" data-toggle="tab">Summary</a></li>
 					<li id="team"><a href="#Team" data-toggle="tab">Team</a></li>	
-					<!--
-					<li id="rewards"><a href="#Rewards" data-toggle="tab">Rewards</a></li>
-					<li id="extras"><a href="#Extras" data-toggle="tab">Extras</a></li>	
-					-->	
+					
 				</ul>
 			</div>
-
+-->
 			<div class="tab-content" >
 				<div id="Fundamentals" class="tab-pane fade in active">
 					{{> Fundamentals}}
@@ -40,7 +73,6 @@
 			-->
 			</div>
 			
-		</div>
 	</div>
 <style type="text/css">
 	.SaveCon{
