--- a/client/templates/loginPage.html
+++ b/client/templates/loginPage.html
@@ -1,5 +1,5 @@
 <template name="loginPage">
-  <div class="container">
+  <div class="container loginContainer">
     <div class="row">
       <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
         <div class="page-header">
@@ -19,4 +19,10 @@
       </div>
     </div>
   </div>
+
+  <style type="text/css">
+  .loginContainer{
+    padding-bottom: 12%;
+  }
+  </style>
 </template>
