--- a/client/templates/signupPage.html
+++ b/client/templates/signupPage.html
@@ -1,5 +1,5 @@
 <template name="signupPage">
-  <div class="container">
+  <div class="container signupContainer">
     <div class="row">
       <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
         <div class="page-header">
@@ -27,4 +27,12 @@
       </div>
     </div>
   </div>
+
+  <style type="text/css">
+
+  .signupContainer{
+    padding-bottom: 5%;
+  }
+  </style>
+
 </template>
