--- a/client/templates/aboutus.html
+++ b/client/templates/aboutus.html
@@ -13,31 +13,31 @@
         <img src="sea-nature-sunny-beach.jpg" alt="sea-nature" style="width:100%; height:480px; overflow: hidden;">
         <div class="container">
             <div class="carousel-caption text-xs-left">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-         </div>
-      </div>
-
-      <div class="item">
-        <img src="landmark-bridge-cliff-california.jpeg" alt="landmark" style="width:100%; height:580px; overflow: hidden;">
-        <div class="container">
-            <div class="carousel-caption text-xs-left">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>Learn about us</h1>
+              <h3>Studyfund is the worlds #1 crowdfunding platform that supports research ideas from all over the world.</h3>
+              <p><a class="btn btn-lg btn-primary" href="/Begin" role="button">Start Today</a></p>
             </div>
           </div>
       </div>
 
       <div class="item">
-        <img src="dawn-landscape-sky-sunset.jpg" alt="dawn-landscape" style="width:100%; height:580px; overflow: hidden;">
+        <img src="landmark-bridge-cliff-california.jpeg" alt="landmark" style="width:100%; height:480px; overflow: hidden;">
         <div class="container">
             <div class="carousel-caption text-xs-left">
-              <h1>Example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>Learn about us</h1>
+              <h3>Studyfund is the worlds #1 crowdfunding platform that supports research ideas from all over the world.</h3>
+              <p><a class="btn btn-lg btn-primary" href="/Begin" role="button">Start Today</a></p>
+            </div>
+          </div>
+      </div>
+
+      <div class="item">
+        <img src="dawn-landscape-sky-sunset.jpg" alt="dawn-landscape" style="width:100%; height:480px; overflow: hidden;">
+        <div class="container">
+            <div class="carousel-caption text-xs-left">
+              <h1>Learn about us</h1>
+              <h3>Studyfund is the worlds #1 crowdfunding platform that supports research ideas from all over the world.</h3>
+              <p><a class="btn btn-lg btn-primary" href="/Begin" role="button">Start Today</a></p>
             </div>
           </div>
       </div>
@@ -83,7 +83,7 @@
 
       <div class="row featurette">
         <div class="col-md-6">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+          <h2 class="featurette-heading">How it works. <span class="text-muted">It'll blow your mind.</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
