--- a/client/templates/carousel.html
+++ b/client/templates/carousel.html
@@ -1,25 +1,30 @@
 <template name="carousel">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+    
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="sea-nature-sunny-beach.jpg" alt="sea-nature" style="width:100%; height:580px; overflow: hidden;">
-      </div>
-
-      <div class="item">
-        <img src="landmark-bridge-cliff-california.jpeg" alt="landmark" style="width:100%; height:580px; overflow: hidden;">
-      </div>
-
-      <div class="item">
-        <img src="dawn-landscape-sky-sunset.jpg" alt="dawn-landscape" style="width:100%; height:580px; overflow: hidden;">
-      </div>
+        <div class="item active" style="height: 100%; float:none;">
+          <div class="col-xs-4"><a href="/projects/project/{{getCarouselProjects 0 'id'}}"><img src="{{getCarouselProjects 0 'photoURL'}}" style="width:105%; height:350px;"></a></div>
+          <div class="carousel-caption">
+            <h3>{{getCarouselProjects 0 "title"}}</h3>
+            <p>{{getCarouselProjects 0 "summary"}}</p>
+          </div>
+        </div>
+        <div class="item" style="height: 100%; float:none;">
+          <div class="col-xs-4"><a href="/projects/project/{{getCarouselProjects 1 'id'}}"><img src="{{getCarouselProjects 1 'photoURL'}}" style="width:105%; height:350px; "></a></div>
+          <div class="carousel-caption">
+            <h3>{{getCarouselProjects 1 "title"}}</h3>
+            <p>{{getCarouselProjects 1 "summary"}}</p>
+          </div>
+        </div>
+        <div class="item" style="height: 100%; float:none;">
+          <div class="col-xs-4"><a href="/projects/project/{{getCarouselProjects 2 'id'}}"><img src="{{getCarouselProjects 2 'photoURL'}}" style="width:105%; height:350px; "></a></div>
+          <div class="carousel-caption">
+            <h3>{{getCarouselProjects 2 "title"}}</h3>
+            <p>{{getCarouselProjects 2 "summary"}}</p>
+          </div>
+        </div>       
     </div>
 
     <!-- Left and right controls -->
@@ -32,4 +37,63 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+  <script>
+      $(document).ready(function () {
+          $('#myCarousel').carousel({
+              interval: 10000
+          })
+          $('.carousel .item').each(function () {
+              var next = $(this).next();
+              if (!next.length) {
+                  next = $(this).siblings(':first');
+              }
+              next.children(':first-child').clone().appendTo($(this));
+              if (next.next().length > 0) {
+                  next.next().children(':first-child').clone().appendTo($(this));
+              } else {
+                  $(this).siblings(':first').children(':first-child').clone().appendTo($(this));
+              }
+          });
+      });
+  </script>
+  <style type="text/css">
+  
+  .carousel-caption{
+    text-align: left;
+    top: 230px;
+    padding-left: 15%;
+  }
+  .carousel {
+    overflow: hidden;
+  }
+  .carousel-inner {
+      width: 150%;
+      left: -25%;
+  }
+  .carousel-inner > .item.next, 
+  .carousel-inner > .item.active.right {
+      -webkit-transform: translate3d(33%, 0, 0);
+      transform: translate3d(33%, 0, 0);
+  }
+  .carousel-inner > .item.prev, 
+  .carousel-inner > .item.active.left {
+      -webkit-transform: translate3d(-33%, 0, 0);
+      transform: translate3d(-33%, 0, 0);
+  }
+  .carousel-control.left{
+    background: rgba(255, 255, 255, 0.5);
+      width: 26.2%;
+  } 
+  .carousel-control.right {
+      background: rgba(255, 255, 255, 0.5);
+      width: 24%;
+  }
+
+  .ViewResearch{
+    border: 2px solid #a1a1a1;
+    padding: 10px 40px;
+    width: 98px;
+    border-radius: 25px;
+ }
+  </style>
 </template>
