Middle of iteration 11
Did FAQ template
created logo
bug fixes

--- a/client/templates/aboutus.html
+++ b/client/templates/aboutus.html
@@ -87,7 +87,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid center-block" src="../placeholder-profile.png" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid center-block" src="https://s3.amazonaws.com/jaydes-photos/All_around_images/adam-icons-pur-gre-rgb_how-it-works-technology.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -99,7 +99,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-fluid center-block" src="../placeholder-profile.png" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid center-block" src="https://s3.amazonaws.com/jaydes-photos/All_around_images/148-17QualitativeResearch.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -111,7 +111,7 @@
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid center-block" src="../placeholder-profile.png" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid center-block" src="https://s3.amazonaws.com/jaydes-photos/All_around_images/Checkmate.jpg" alt="Generic placeholder image">
         </div>
       </div>
 
