--- a/client/templates/department.html
+++ b/client/templates/department.html
@@ -11,6 +11,8 @@
 			  <div class="item">Mathematics</div>
 			  <div class="item">Physics</div>
 			  <div class="item">Fitness and Nutrition</div> 
+			  <div class="item">Other</div> 
+
 				</div>
 			</div> 
 		</div>
