--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -3,7 +3,7 @@
 	<div class="continer-fluid footer primary">
 		<div class="row">
 			<center>
-					<div class="col-lg-3">
+					<div class="col-lg-3 footerTags">
 						<h4>About</h4>
 						What is Study Fund? <br>
 						Jobs <br>
@@ -11,14 +11,14 @@
 			            &copy; 2016 StudyFund 
 			          
 					</div>
-					<div class="col-lg-3">
+					<div class="col-lg-3 footerTags">
 						<h4>Help</h4>
-						FAQs <br>
+						<a href = "/FAQs">FAQs <br> </a>
 						Rules <br>
 						Project Guide <br>
 						Contact us
 					</div>
-					<div class="col-lg-3">
+					<div class="col-lg-3 footerTags">
 						<h4>Explore</h4>
 						Medical <br>
 						Nutrition <br>
@@ -27,7 +27,7 @@
 						Chemistry <br>
 						Biology
 					</div>
-					<div class="col-lg-3">
+					<div class="col-lg-3 footerTags">
 						<h4>Social Media</h4>
 						Facebook <br>
 						Instagram <br>
@@ -40,4 +40,9 @@
 		</div>
 	</div>
 	</footer>
+<style type="text/css">
+	.footerTags a {
+		color: white;
+	}
+</style>
 </template>
