--- a/client/templates/projectsLayout.html
+++ b/client/templates/projectsLayout.html
@@ -22,6 +22,7 @@
           <div class="item" >Mathematics</div>
           <div class="item" >Engineering</div>
           <div class="item">Medical</div>
+          <div class="item">Physics</div>
           <div class="item" >Fitness & Nutrition</div>
           <div class="item" >Other</div>
         </div>
