--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Study Fund</a>
+      <a class="navbar-brand" href="/"><img src="https://s3.amazonaws.com/jaydes-photos/defaultImages/Logo(1).png" style = "max-height: 40px; position: relative; top: -10px; right: 10px;"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,6 +19,7 @@
         <li><a href="/Begin">Start a quest</a></li>
         <li><a href="/aboutUs">About us</a></li>
       </ul>
+      
       <form class="search navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" name="query" class="form-control" placeholder="Search">
