--- a/client/templates/supportProject.html
+++ b/client/templates/supportProject.html
@@ -4,12 +4,26 @@
 			<h1>Support this Project</h1>
 		</div>
 		<form id="support-form">
+			<div class="form-group">
+                <label for="Amount">How much would you like to contribute?</label>
+                <input type="text" id="contribute-amount" class="form-control" placeholder="Amount" >
+            </div>
+
+            {{#if savedCreditCard}}
+            	<b>Select a recently used credit card</b>
+            	<br>
+            	<br>
+				{{#each card in getSources}}
+					<div class="row">
+						{{> creditCard card}}
+					</div>
+				{{/each}}
+				<div class="radio">
+						<label><input type="radio" name="card" id="new-card-radio" value="new"><b>Use a new card</b></label>
+				</div>
+			{{/if}}
 			<div class="row">
-				<div class="form-group">
-                    <label for="Amount">How much would you like to contribute?</label>
-                    <input type="text" data-stripe="contribute-amount" class="form-control" placeholder="Amount" >
-                </div>
-				<div class="col-xs-12">
+				<div class="col-xs-12 new-card-data">
 					<div class="form-group">
 						<label class="text-success"><i class="fa fa-lock"></i> Card Number (Totes Secure, Like a Bank)</label>
 						<input type="text" data-stripe="cardNumber" class="form-control card-number" placeholder="Card Number">
@@ -17,15 +31,15 @@
 				</div>
 			</div> <!-- end .row -->
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-xs-4 new-card-data">
 					<label>Exp. Mo.</label>
 					<input type="text" data-stripe="expMo" class="form-control exp-month" placeholder="Exp. Mo.">
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-4 new-card-data">
 					<label>Exp. Yr.</label>
 					<input type="text" data-stripe="expYr" class="form-control exp-year" placeholder="Exp. Yr.">
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-4 new-card-data">
 					<label>CVC</label>
 					<input type="text" data-stripe="cvc" class="form-control cvc" placeholder="CVC">
 				</div>
